--- a/alfred/Alfred.alfredpreferences/preferences/features/websearch/prefs.plist
+++ b/alfred/Alfred.alfredpreferences/preferences/features/websearch/prefs.plist
@@ -43,6 +43,19 @@
 			<key>utf8</key>
 			<true/>
 		</dict>
+		<key>C6938A35-B64E-49E8-BF99-24EAE1410D09</key>
+		<dict>
+			<key>enabled</key>
+			<true/>
+			<key>keyword</key>
+			<string>bd</string>
+			<key>text</key>
+			<string>Search Baidu for '...'</string>
+			<key>url</key>
+			<string>http://www.baidu.com/s?ie=UTF-8&amp;wd={query}</string>
+			<key>utf8</key>
+			<true/>
+		</dict>
 	</dict>
 </dict>
 </plist>
