--- a/alfred/Alfred.alfredpreferences/workflows/user.workflow.5E4110AF-5830-4E54-AF0F-6AFFB1BA159E/info.plist
+++ b/alfred/Alfred.alfredpreferences/workflows/user.workflow.5E4110AF-5830-4E54-AF0F-6AFFB1BA159E/info.plist
@@ -145,6 +145,64 @@
 		<dict>
 			<key>config</key>
 			<dict>
+				<key>alfredfiltersresults</key>
+				<false/>
+				<key>alfredfiltersresultsmatchmode</key>
+				<integer>0</integer>
+				<key>argumenttrimmode</key>
+				<integer>0</integer>
+				<key>argumenttype</key>
+				<integer>0</integer>
+				<key>escaping</key>
+				<integer>100</integer>
+				<key>keyword</key>
+				<string>yd</string>
+				<key>queuedelaycustom</key>
+				<integer>1</integer>
+				<key>queuedelayimmediatelyinitially</key>
+				<false/>
+				<key>queuedelaymode</key>
+				<integer>2</integer>
+				<key>queuemode</key>
+				<integer>2</integer>
+				<key>runningsubtext</key>
+				<string>正在翻译···</string>
+				<key>script</key>
+				<string>&lt;?php
+
+require('YoudaoTranslate.php');
+
+$keys = [
+	['appKey' =&gt; '72572d980cfe900c', 'secret' =&gt; '4Njy1XxiEJhecQgwdgVcXv4ewKzyh4NI']
+];
+
+$translator = new YoudaoTranslate($keys);
+echo $translator-&gt;translate($argv[1]);
+
+?&gt;</string>
+				<key>scriptargtype</key>
+				<integer>1</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>subtext</key>
+				<string>请输入要翻译的内容</string>
+				<key>title</key>
+				<string>有道翻译</string>
+				<key>type</key>
+				<integer>1</integer>
+				<key>withspace</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.scriptfilter</string>
+			<key>uid</key>
+			<string>8FE8475E-6310-49A4-967E-D6CCE73A86AC</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
 				<key>concurrently</key>
 				<false/>
 				<key>escaping</key>
@@ -180,6 +238,10 @@ echo -n $query | say $1 -v Samantha</string>
 				<false/>
 				<key>focusedappvariablename</key>
 				<string></string>
+				<key>hotkey</key>
+				<integer>0</integer>
+				<key>hotmod</key>
+				<integer>0</integer>
 				<key>leftcursor</key>
 				<false/>
 				<key>modsmode</key>
@@ -197,57 +259,19 @@ echo -n $query | say $1 -v Samantha</string>
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>alfredfiltersresults</key>
-				<false/>
-				<key>argumenttype</key>
+				<key>matchmode</key>
 				<integer>0</integer>
-				<key>escaping</key>
-				<integer>100</integer>
-				<key>keyword</key>
-				<string>yd</string>
-				<key>queuedelaycustom</key>
-				<integer>1</integer>
-				<key>queuedelayimmediatelyinitially</key>
-				<false/>
-				<key>queuedelaymode</key>
-				<integer>2</integer>
-				<key>queuemode</key>
-				<integer>2</integer>
-				<key>runningsubtext</key>
-				<string>正在翻译···</string>
-				<key>script</key>
-				<string>&lt;?php
-
-require('YoudaoTranslate.php');
-
-$keys = [
-	['appKey' =&gt; '043006a9363d8f0c', 'secret' =&gt; 'xKbfHSuE65fJE71jDmAzLtY1WwWbGysd'],
-	['appKey' =&gt; '2280cdb033304a40', 'secret' =&gt; '9WmJZbNe9JaYJl8dzzaZbmcYdsf6VJ7c']
-];
-
-$translator = new YoudaoTranslate($keys);
-echo $translator-&gt;translate($argv[1]);
-
-?&gt;</string>
-				<key>scriptargtype</key>
-				<integer>1</integer>
-				<key>scriptfile</key>
+				<key>matchstring</key>
+				<string>~</string>
+				<key>replacestring</key>
 				<string></string>
-				<key>subtext</key>
-				<string>请输入要翻译的内容</string>
-				<key>title</key>
-				<string>有道翻译</string>
-				<key>type</key>
-				<integer>1</integer>
-				<key>withspace</key>
-				<true/>
 			</dict>
 			<key>type</key>
-			<string>alfred.workflow.input.scriptfilter</string>
+			<string>alfred.workflow.utility.replace</string>
 			<key>uid</key>
-			<string>8FE8475E-6310-49A4-967E-D6CCE73A86AC</string>
+			<string>1631393E-5B53-4C8B-AF64-A04B687438DF</string>
 			<key>version</key>
-			<integer>2</integer>
+			<integer>1</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -265,23 +289,6 @@ echo $translator-&gt;translate($argv[1]);
 			<string>alfred.workflow.utility.filter</string>
 			<key>uid</key>
 			<string>487D7A3C-11A7-416D-8F0F-21097B979E4C</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>matchmode</key>
-				<integer>0</integer>
-				<key>matchstring</key>
-				<string>~</string>
-				<key>replacestring</key>
-				<string></string>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.utility.replace</string>
-			<key>uid</key>
-			<string>1631393E-5B53-4C8B-AF64-A04B687438DF</string>
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
