do not back up translate log

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
 **/.DS_Store
-./alfred/Alfred.alfredpreferences/workflows/user.workflow.5E4110AF-5830-4E54-AF0F-6AFFB1BA159E/YoudaoTranslate*.log
+**/YoudaoTranslate*.log
