add understand c++ color style

--- a/alfred/Alfred.alfredpreferences/preferences/local/e439590c78c8a758c9d1bcca944202f6f0f1798d/features/defaultresults/prefs.plist
+++ b/alfred/Alfred.alfredpreferences/preferences/local/e439590c78c8a758c9d1bcca944202f6f0f1798d/features/defaultresults/prefs.plist
@@ -16,6 +16,7 @@
 		<string>~/Library/Caches/Metadata</string>
 		<string>~/Library/Mobile Documents</string>
 		<string>~/Library/PreferencePanes</string>
+		<string>~/Tencent</string>
 	</array>
 </dict>
 </plist>
