--- a/alfred/Alfred.alfredpreferences/preferences/features/websearch/prefs.plist
+++ b/alfred/Alfred.alfredpreferences/preferences/features/websearch/prefs.plist
@@ -4,6 +4,19 @@
 <dict>
 	<key>customSites</key>
 	<dict>
+		<key>0D86F455-9ACA-441F-A150-D4BAFF3EF3EE</key>
+		<dict>
+			<key>enabled</key>
+			<true/>
+			<key>keyword</key>
+			<string>zh</string>
+			<key>text</key>
+			<string>Search ZhiHu for '...'</string>
+			<key>url</key>
+			<string>https://www.zhihu.com/search?type=content&amp;q={query}</string>
+			<key>utf8</key>
+			<true/>
+		</dict>
 		<key>5BA7AF1A-D6CB-40B1-AB21-3D0D91FED804</key>
 		<dict>
 			<key>enabled</key>
